--- a/Objects/platform.build_log.htm
+++ b/Objects/platform.build_log.htm
@@ -27,28 +27,52 @@ Project File Date:  12/12/2015
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.cpp...
-.\misc\context\inc\VM.h(44): warning:  #1300-D: alloc inherits implicit virtual
+.\misc\context\inc\VM.h(43): warning:  #1300-D: alloc inherits implicit virtual
           void *alloc (uint32_t size)
-.\misc\context\inc\VM.h(49): warning:  #1300-D: free inherits implicit virtual
+.\misc\context\inc\VM.h(48): warning:  #1300-D: free inherits implicit virtual
           void free (void *p)
-.\misc\context\inc\VM.h(128): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "l" (declared at line 143)
+.\misc\context\inc\VM.h(137): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "l" (declared at line 152)
               switch (a.a0) {
               ^
-entry\src\main.cpp(48): warning:  #111-D: statement is unreachable
+.\gui\inc\gline.h(230): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+entry\src\main.cpp(46): warning:  #111-D: statement is unreachable
       return 0;
-entry\src\main.cpp(78): warning:  #940-D: missing return statement at end of non-void function "touchAnyListener"
+entry\src\main.cpp(75): warning:  #940-D: missing return statement at end of non-void function "touchAnyListener"
   }
-entry\src\main.cpp: 5 warnings, 0 errors
+entry\src\main.cpp(86): warning:  #940-D: missing return statement at end of non-void function "touchClickListener"
+  }
+entry\src\main.cpp(137): warning:  #177-D: variable "b" was declared but never referenced
+          Box<MaxGuiRange> b = {120, 130, 100, 40};
+entry\src\main.cpp: 12 warnings, 0 errors
 compiling device.cpp...
-.\misc\context\inc\VM.h(44): warning:  #1300-D: alloc inherits implicit virtual
+.\misc\context\inc\VM.h(43): warning:  #1300-D: alloc inherits implicit virtual
           void *alloc (uint32_t size)
-.\misc\context\inc\VM.h(49): warning:  #1300-D: free inherits implicit virtual
+.\misc\context\inc\VM.h(48): warning:  #1300-D: free inherits implicit virtual
           void free (void *p)
-.\misc\context\inc\VM.h(128): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "l" (declared at line 143)
+.\misc\context\inc\VM.h(137): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "l" (declared at line 152)
               switch (a.a0) {
               ^
+.\gui\inc\gline.h(230): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
 hardware\src\device.cpp(41): warning:  #61-D: integer operation result is out of range
       DEV_Pin_Clr(GPIOA, CS_Pin);
 hardware\src\device.cpp(41): warning:  #68-D: integer conversion resulted in a change of sign
@@ -57,51 +81,77 @@ hardware\src\device.cpp(48): warning:  #61-D: integer operation result is out of
       DEV_Pin_Clr(GPIOA, CS_Pin);
 hardware\src\device.cpp(48): warning:  #68-D: integer conversion resulted in a change of sign
       DEV_Pin_Clr(GPIOA, CS_Pin);
-hardware\src\device.cpp: 7 warnings, 0 errors
+hardware\src\device.cpp: 12 warnings, 0 errors
 compiling touchSensorApiInterface.cpp...
-.\misc\context\inc\vm.h(44): warning:  #1300-D: alloc inherits implicit virtual
+.\gui\inc\gline.h(230): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\misc\context\inc\vm.h(43): warning:  #1300-D: alloc inherits implicit virtual
           void *alloc (uint32_t size)
-.\misc\context\inc\vm.h(49): warning:  #1300-D: free inherits implicit virtual
+.\misc\context\inc\vm.h(48): warning:  #1300-D: free inherits implicit virtual
           void free (void *p)
-.\misc\context\inc\vm.h(128): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "l" (declared at line 143)
+.\misc\context\inc\vm.h(137): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "l" (declared at line 152)
               switch (a.a0) {
               ^
 hardware\src\touchSensorApiInterface.cpp(16): warning:  #177-D: variable "t" was declared but never referenced
           uint32_t t = 0;
 hardware\src\touchSensorApiInterface.cpp(25): warning:  #1-D: last line of file ends without a newline
   }
-hardware\src\touchSensorApiInterface.cpp: 5 warnings, 0 errors
+hardware\src\touchSensorApiInterface.cpp: 10 warnings, 0 errors
 compiling VM.cpp...
-.\misc\context\inc\VM.h(44): warning:  #1300-D: alloc inherits implicit virtual
+.\gui\inc\gline.h(230): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\misc\context\inc\VM.h(43): warning:  #1300-D: alloc inherits implicit virtual
           void *alloc (uint32_t size)
-.\misc\context\inc\VM.h(49): warning:  #1300-D: free inherits implicit virtual
+.\misc\context\inc\VM.h(48): warning:  #1300-D: free inherits implicit virtual
           void free (void *p)
-.\misc\context\inc\VM.h(128): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "l" (declared at line 143)
+.\misc\context\inc\VM.h(137): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "l" (declared at line 152)
               switch (a.a0) {
               ^
-misc\context\src\VM.cpp(46): warning:  #940-D: missing return statement at end of non-void function "vmfault"
-  }
-misc\context\src\VM.cpp: 4 warnings, 0 errors
-compiling vmapi.cpp...
+misc\context\src\VM.cpp: 8 warnings, 0 errors
 compiling Event.cpp...
-.\misc\context\inc\vm.h(44): warning:  #1300-D: alloc inherits implicit virtual
+.\gui\inc\gline.h(230): warning:  #1-D: last line of file ends without a newline
+  #endif
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\gui\inc\GLabel.h(71): warning:  #3630-D: invalid narrowing conversion from "signed int" to "unsigned short"
+          Box<uint16_t> box = {x, y, w, h};
+.\misc\context\inc\vm.h(43): warning:  #1300-D: alloc inherits implicit virtual
           void *alloc (uint32_t size)
-.\misc\context\inc\vm.h(49): warning:  #1300-D: free inherits implicit virtual
+.\misc\context\inc\vm.h(48): warning:  #1300-D: free inherits implicit virtual
           void free (void *p)
-.\misc\context\inc\vm.h(128): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "l" (declared at line 143)
+.\misc\context\inc\vm.h(137): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "l" (declared at line 152)
               switch (a.a0) {
               ^
-misc\context\src\Event.cpp: 3 warnings, 0 errors
+misc\context\src\Event.cpp: 8 warnings, 0 errors
 compiling serverInterface.cpp...
 compiling TimerServer.cpp...
-compiling DriverInterface.cpp...
 linking...
-Program Size: Code=19964 RO-data=57732 RW-data=64 ZI-data=45952  
+Program Size: Code=22864 RO-data=58224 RW-data=52 ZI-data=46244  
 FromELF: creating hex file...
-".\Objects\platform.axf" - 0 Error(s), 24 Warning(s).
+".\Objects\platform.axf" - 0 Error(s), 50 Warning(s).
 
 <h2>Software Packages used:</h2>
 
